# mpar-sim

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
docs/: conf.py
docs/source/: api.rst  index.rst  usage.rst
examples/: adaptive_tracking.ipynb  adaptive_tracking.py  basic_sim.ipynb  compare_agents.py  mpar_driver.py  particle_scan.ipynb  particle_scan.py  plot_rl_stats.ipynb  ppg_realistic_surveillance.py  ppg_simple_surveillance.py  ppo_realistic_surveillance.py  ppo_simple_surveillance.py  ppo_spectrum_hopper.py  ppo_surveillance.py  raster_scan.ipynb  record_videos.py  sac_spectrum_hopper.py  sac_spectrum_hopper_2d.py  sac_spectrum_hopper_recorded.py  sac_spectrum_hopper_recorded_1d.py  sac_tianshou.py  sensor_management.ipynb  sensor_management.py  spectrum_sb3.py  test.py
mpar_sim/: __init__.py  beam.py  defaults.py  job.py  look.py  radar.py  radar_detection_generator.py  radar_env.py  resource_management.py  schedulers.py
mpar_sim/agents/: __init__.py  adaptive_track.py  agent.py  raster_scan.py  raster_scan_agent.py  track_while_scan.py
mpar_sim/beam/: beam.py  common.py
mpar_sim/common/: __init__.py  activation.py  albersheim.py  coordinate_transform.py  detection.py  matrix.py  sigma_points.py  wrap_to_interval.py
mpar_sim/deleter/: error.py
mpar_sim/envs/: __init__.py  discrete_spectrum_env.py  (+9 more)
tests/: ppo_spectrum.py  test_adaptive_track.py  test_auction.py  test_coordinate_transform.py  test_extended_kalman.py  test_imm.py  test_jpda.py  test_kalman.py  test_nonlinear.py  test_pda.py  test_rcs.py  test_spa.py  test_target.py  test_ukf.py  test_volume.py
trs/: discrete_recurrent_ppo.py  recurrent_ppo.py  spectrum_dqn.py  spectrum_plots.py  tensorboard_plots.py  test_recurrent_ppo.py
(+103 files in other folders)
