[tool.poetry]
name = "mpar-sim"
version = "0.1.0"
description = ""
authors = ["Shane Flandermeyer <shaneflandermeyer@gmail.com>"]
readme = "README.md"
packages = [{include = "mpar_sim"}]

[tool.poetry.dependencies]
python = "^3.10"
stonesoup = "^0.1b11"
numpy = "^1.23.4"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
