[tool.poetry]
name = "mpar-sim"
version = "0.1.0"
description = ""
authors = ["Shane Flandermeyer <shaneflandermeyer@gmail.com>"]
readme = "README.md"
packages = [{include = "mpar_sim"}]

[tool.poetry.dependencies]
python = "^3.10"
stonesoup = "^0.1b11"
numpy = "^1.23.4"
scipy = "^1.9.3"
setuptools = "^65.5.1"
plotly = "^5.11.0"
nbformat = "^5.7.0"
autopep8 = "^2.0.0"
ipykernel = "^6.17.1"


[tool.poetry.dev-dependencies]
ipykernel = "^6.17.1"
pandas = "^1.5.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
