[tool.poetry]
name = "mpar-sim"
version = "0.1.0"
description = ""
authors = ["Shane Flandermeyer <shaneflandermeyer@gmail.com>"]
readme = "README.md"
packages = [{include = "mpar_sim"}]

[tool.poetry.dependencies]
python = "^3.8"
stonesoup = "^0.1b11"
numpy = "^1.23.4"
scipy = "^1.9.3"
setuptools = "^65.5.1"
plotly = "^5.11.0"
nbformat = "^5.7.0"
autopep8 = "^2.0.0"
ipykernel = "^6.17.1"
pyswarms = "^1.3.0"
Gymnasium = "^0.26.3"
pygame = "^2.1.0"
filterpy = "^1.4.5"
pytest = "^7.2.1"
numba = "^0.56.4"


[tool.poetry.dev-dependencies]
ipykernel = "^6.17.1"
pandas = "^1.5.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
